--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -490,7 +490,7 @@ body {
   font-size: 100%; }
 
 body {
-  background: #fff;
+  background: #222222;
   color: #222;
   cursor: auto;
   font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
@@ -558,7 +558,7 @@ select {
 
 .row {
   margin: 0 auto;
-  max-width: 62.5rem;
+  max-width: 80rem;
   width: 100%; }
   .row:before, .row:after {
     content: " ";
@@ -4383,7 +4383,7 @@ button:focus {
     .reveal-modal {
       left: 0;
       margin: 0 auto;
-      max-width: 62.5rem;
+      max-width: 80rem;
       right: 0;
       width: 80%; } }
   @media only screen and (min-width: 40.0625em) {
@@ -4399,35 +4399,35 @@ button:focus {
     .reveal-modal.tiny {
       left: 0;
       margin: 0 auto;
-      max-width: 62.5rem;
+      max-width: 80rem;
       right: 0;
       width: 30%; } }
   @media only screen and (min-width: 40.0625em) {
     .reveal-modal.small {
       left: 0;
       margin: 0 auto;
-      max-width: 62.5rem;
+      max-width: 80rem;
       right: 0;
       width: 40%; } }
   @media only screen and (min-width: 40.0625em) {
     .reveal-modal.medium {
       left: 0;
       margin: 0 auto;
-      max-width: 62.5rem;
+      max-width: 80rem;
       right: 0;
       width: 60%; } }
   @media only screen and (min-width: 40.0625em) {
     .reveal-modal.large {
       left: 0;
       margin: 0 auto;
-      max-width: 62.5rem;
+      max-width: 80rem;
       right: 0;
       width: 70%; } }
   @media only screen and (min-width: 40.0625em) {
     .reveal-modal.xlarge {
       left: 0;
       margin: 0 auto;
-      max-width: 62.5rem;
+      max-width: 80rem;
       right: 0;
       width: 95%; } }
   .reveal-modal.full {
@@ -4442,7 +4442,7 @@ button:focus {
       .reveal-modal.full {
         left: 0;
         margin: 0 auto;
-        max-width: 62.5rem;
+        max-width: 80rem;
         right: 0;
         width: 100%; } }
   .reveal-modal.toback {
@@ -4961,7 +4961,7 @@ meta.foundation-mq-topbar {
 /* Wrapped around .top-bar to contain to grid width */
 .contain-to-grid {
   width: 100%;
-  background: #333333; }
+  background: #222222; }
   .contain-to-grid .top-bar {
     margin-bottom: 0; }
 
@@ -4985,7 +4985,7 @@ meta.foundation-mq-topbar {
       z-index: 98; }
 
 .top-bar {
-  background: #333333;
+  background: #222222;
   height: 2.8125rem;
   line-height: 2.8125rem;
   margin-bottom: 0;
@@ -5023,7 +5023,7 @@ meta.foundation-mq-topbar {
     height: 2.8125rem;
     margin: 0; }
     .top-bar .name h1, .top-bar .name h2, .top-bar .name h3, .top-bar .name h4, .top-bar .name p, .top-bar .name span {
-      font-size: 1.0625rem;
+      font-size: 1.5rem;
       line-height: 2.8125rem;
       margin: 0; }
       .top-bar .name h1 a, .top-bar .name h2 a, .top-bar .name h3 a, .top-bar .name h4 a, .top-bar .name p a, .top-bar .name span a {
@@ -5071,7 +5071,7 @@ meta.foundation-mq-topbar {
     background: transparent;
     height: auto; }
     .top-bar.expanded .title-area {
-      background: #333333; }
+      background: #222222; }
     .top-bar.expanded .toggle-topbar a {
       color: #888888; }
       .top-bar.expanded .toggle-topbar a span::after {
@@ -5097,24 +5097,24 @@ meta.foundation-mq-topbar {
     width: 100%; }
   .top-bar-section .divider,
   .top-bar-section [role="separator"] {
-    border-top: solid 1px #1a1a1a;
+    border-top: solid 1px #111111;
     clear: both;
     height: 1px;
     width: 100%; }
   .top-bar-section ul li {
-    background: #333333; }
+    background: #222222; }
     .top-bar-section ul li > a {
       color: #FFFFFF;
       display: block;
       font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
-      font-size: 0.8125rem;
+      font-size: inherit;
       font-weight: normal;
       padding-left: 0.9375rem;
       padding: 12px 0 12px 0.9375rem;
       text-transform: none;
       width: 100%; }
       .top-bar-section ul li > a.button {
-        font-size: 0.8125rem;
+        font-size: inherit;
         padding-left: 0.9375rem;
         padding-right: 0.9375rem;
         background-color: #008CBA;
@@ -5177,7 +5177,7 @@ meta.foundation-mq-topbar {
         .top-bar-section ul li > a.button.info:focus {
           color: #FFFFFF; }
     .top-bar-section ul li > button {
-      font-size: 0.8125rem;
+      font-size: inherit;
       padding-left: 0.9375rem;
       padding-right: 0.9375rem;
       background-color: #008CBA;
@@ -5242,7 +5242,7 @@ meta.foundation-mq-topbar {
     .top-bar-section ul li:hover:not(.has-form) > a {
       background-color: #555555;
       color: #FFFFFF;
-      background: #222222; }
+      background: #006282; }
     .top-bar-section ul li.active > a {
       background: #008CBA;
       color: #FFFFFF; }
@@ -5329,7 +5329,7 @@ meta.foundation-mq-topbar {
 
 @media only screen and (min-width: 40.0625em) {
   .top-bar {
-    background: #333333;
+    background: #222222;
     overflow: visible; }
     .top-bar:before, .top-bar:after {
       content: " ";
@@ -5356,11 +5356,11 @@ meta.foundation-mq-topbar {
       position: relative;
       top: 0.53125rem; }
     .top-bar.expanded {
-      background: #333333; }
+      background: #222222; }
   .contain-to-grid .top-bar {
     margin-bottom: 0;
     margin: 0 auto;
-    max-width: 62.5rem; }
+    max-width: 80rem; }
   .top-bar-section {
     transition: none 0 0;
     left: 0 !important; }
@@ -5374,15 +5374,15 @@ meta.foundation-mq-topbar {
           display: none; }
     .top-bar-section li.hover > a:not(.button) {
       background-color: #555555;
-      background: #222222;
+      background: #006282;
       color: #FFFFFF; }
     .top-bar-section li:not(.has-form) a:not(.button) {
-      background: #333333;
+      background: #222222;
       line-height: 2.8125rem;
       padding: 0 0.9375rem; }
       .top-bar-section li:not(.has-form) a:not(.button):hover {
         background-color: #555555;
-        background: #222222; }
+        background: #006282; }
     .top-bar-section li.active:not(.has-form) a:not(.button) {
       background: #008CBA;
       color: #FFFFFF;
@@ -5439,18 +5439,18 @@ meta.foundation-mq-topbar {
       min-width: 100%;
       top: auto; }
       .top-bar-section .dropdown li a {
-        background: #333333;
+        background: #222222;
         color: #FFFFFF;
         line-height: 2.8125rem;
         padding: 12px 0.9375rem;
         white-space: nowrap; }
       .top-bar-section .dropdown li:not(.has-form):not(.active) > a:not(.button) {
-        background: #333333;
+        background: #222222;
         color: #FFFFFF; }
       .top-bar-section .dropdown li:not(.has-form):not(.active):hover > a:not(.button) {
         background-color: #555555;
         color: #FFFFFF;
-        background: #222222; }
+        background: #006282; }
       .top-bar-section .dropdown li label {
         background: #333333;
         white-space: nowrap; }
@@ -5459,14 +5459,14 @@ meta.foundation-mq-topbar {
         top: 0; }
     .top-bar-section > ul > .divider,
     .top-bar-section > ul > [role="separator"] {
-      border-right: solid 1px #4e4e4e;
+      border-right: solid 1px #3f3f3f;
       border-bottom: none;
       border-top: none;
       clear: none;
       height: 2.8125rem;
       width: 0; }
     .top-bar-section .has-form {
-      background: #333333;
+      background: #222222;
       height: 2.8125rem;
       padding: 0 0.9375rem; }
     .top-bar-section .right li .dropdown {
@@ -5481,7 +5481,7 @@ meta.foundation-mq-topbar {
         left: 100%; }
   .no-js .top-bar-section ul li:hover > a {
     background-color: #555555;
-    background: #222222;
+    background: #006282;
     color: #FFFFFF; }
   .no-js .top-bar-section ul li:active > a {
     background: #008CBA;
@@ -5642,11 +5642,10 @@ td {
 a {
   color: #008CBA;
   line-height: inherit;
-  text-decoration: underline; }
+  text-decoration: none; }
   a:hover,
   a:focus {
-    color: #0078a0;
-    text-decoration: none; }
+    color: #006282; }
   a img {
     border: none; }
 
@@ -7140,3 +7139,89 @@ to display none.
   .respond-form,
   nav {
     display: none; } }
+
+h1, h2, h3, h4, h5, h6, p, abbr, label {
+  color: inherit; }
+
+abbr, label {
+  opacity: 0.8; }
+
+a:visited {
+  color: #AA33AA; }
+  a:visited:hover {
+    color: #772477; }
+
+blockquote, pre {
+  background-color: #EEEEEE; }
+
+blockquote {
+  color: inherit;
+  border-left-width: 0.1875rem;
+  padding-bottom: 0.2rem; }
+  blockquote p {
+    color: inherit; }
+  blockquote cite {
+    color: inherit;
+    font-size: inherit;
+    display: inline; }
+    blockquote cite:before {
+      content: ''; }
+
+pre code {
+  background: transparent;
+  border: none; }
+
+.center {
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto; }
+
+.small {
+  font-size: smaller; }
+
+.bordered {
+  border: solid 0.125rem #DDDDDD; }
+
+#siteTitle a {
+  width: auto; }
+
+#content {
+  background-color: #444444; }
+  #content #inner-content {
+    padding: 0; }
+
+.sidebar {
+  background-color: #333333;
+  color: #FFFFFF; }
+  .sidebar a:link {
+    color: #00a4da; }
+    .sidebar a:link:hover {
+      color: #007fa8; }
+  .sidebar a:visited {
+    color: #ca4dca; }
+    .sidebar a:visited:hover {
+      color: #ae34ae; }
+  .sidebar .search-field, .sidebar .search-submit {
+    display: inline-block;
+    vertical-align: bottom;
+    width: auto;
+    margin-bottom: 0.5rem; }
+  .sidebar .search-field {
+    margin-right: 0.25rem; }
+  .sidebar .search-submit {
+    padding: 0.5rem; }
+
+main {
+  background-color: #EEEEEE; }
+  main.columns {
+    padding: 0; }
+  main > header, main article {
+    background-color: #FFFFFF;
+    padding: 0 1.875rem 1px; }
+  main article:nth-of-type(even) {
+    background-color: #F9F9F9; }
+
+#mainFooter {
+  background-color: #222222;
+  color: white;
+  margin-top: 0; }
