Beginning to implement page templates; some styling of byline

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5979,7 +5979,7 @@ blockquote p {
   top: 0;
   transition: -webkit-transform 500ms ease 0s;
   transition: transform 500ms ease 0s;
-  width: 15.625rem;
+  width: 18.75rem;
   z-index: 1001;
   -webkit-transform: translate3d(-100%, 0, 0);
   transform: translate3d(-100%, 0, 0);
@@ -6000,7 +6000,7 @@ blockquote p {
   top: 0;
   transition: -webkit-transform 500ms ease 0s;
   transition: transform 500ms ease 0s;
-  width: 15.625rem;
+  width: 18.75rem;
   z-index: 1001;
   -webkit-transform: translate3d(100%, 0, 0);
   transform: translate3d(100%, 0, 0);
@@ -6035,8 +6035,8 @@ ul.off-canvas-list {
       background: #242424; }
 
 .move-right > .inner-wrap {
-  -webkit-transform: translate3d(15.625rem, 0, 0);
-  transform: translate3d(15.625rem, 0, 0); }
+  -webkit-transform: translate3d(18.75rem, 0, 0);
+  transform: translate3d(18.75rem, 0, 0); }
 
 .move-right .exit-off-canvas {
   -webkit-backface-visibility: hidden;
@@ -6057,8 +6057,8 @@ ul.off-canvas-list {
       background: rgba(255, 255, 255, 0.05); } }
 
 .move-left > .inner-wrap {
-  -webkit-transform: translate3d(-15.625rem, 0, 0);
-  transform: translate3d(-15.625rem, 0, 0); }
+  -webkit-transform: translate3d(-18.75rem, 0, 0);
+  transform: translate3d(-18.75rem, 0, 0); }
 
 .move-left .exit-off-canvas {
   -webkit-backface-visibility: hidden;
@@ -6148,16 +6148,16 @@ ul.off-canvas-list {
       background: rgba(255, 255, 255, 0.05); } }
 
 .no-csstransforms .left-off-canvas-menu {
-  left: -15.625rem; }
+  left: -18.75rem; }
 
 .no-csstransforms .right-off-canvas-menu {
-  right: -15.625rem; }
+  right: -18.75rem; }
 
 .no-csstransforms .move-left > .inner-wrap {
-  right: 15.625rem; }
+  right: 18.75rem; }
 
 .no-csstransforms .move-right > .inner-wrap {
-  left: 15.625rem; }
+  left: 18.75rem; }
 
 .left-submenu {
   -webkit-backface-visibility: hidden;
@@ -6170,7 +6170,7 @@ ul.off-canvas-list {
   overflow-y: auto;
   position: absolute;
   top: 0;
-  width: 15.625rem;
+  width: 18.75rem;
   z-index: 1002;
   -webkit-transform: translate3d(-100%, 0, 0);
   transform: translate3d(-100%, 0, 0);
@@ -6211,7 +6211,7 @@ ul.off-canvas-list {
   overflow-y: auto;
   position: absolute;
   top: 0;
-  width: 15.625rem;
+  width: 18.75rem;
   z-index: 1002;
   -webkit-transform: translate3d(100%, 0, 0);
   transform: translate3d(100%, 0, 0);
@@ -7140,10 +7140,10 @@ to display none.
   nav {
     display: none; } }
 
-h1, h2, h3, h4, h5, h6, p, abbr, label {
+h1, h2, h3, h4, h5, h6, p, abbr, label, caption, table caption {
   color: inherit; }
 
-abbr, label {
+abbr, label, caption {
   opacity: 0.8; }
 
 a:visited {
@@ -7201,15 +7201,18 @@ pre code {
     color: #ca4dca; }
     .sidebar a:visited:hover {
       color: #ae34ae; }
-  .sidebar .search-field, .sidebar .search-submit {
-    display: inline-block;
-    vertical-align: bottom;
-    width: auto;
-    margin-bottom: 0.5rem; }
-  .sidebar .search-field {
-    margin-right: 0.25rem; }
-  .sidebar .search-submit {
-    padding: 0.5rem; }
+
+.search-form .search-field, .search-form .search-submit {
+  display: inline-block;
+  vertical-align: bottom;
+  width: auto;
+  margin-bottom: 0.5rem; }
+
+.search-form .search-field {
+  margin-right: 0.25rem; }
+
+.search-form .search-submit {
+  padding: 0.5rem; }
 
 main {
   background-color: #EEEEEE; }
