--- a/assets/scss/_settings.scss
+++ b/assets/scss/_settings.scss
@@ -857,7 +857,7 @@ $anchor-font-color-hover: scale-color($anchor-font-color, $lightness: -30%);
 // $tabbar-header-margin: 0;
 
 // Off Canvas Menu Variables
-// $off-canvas-width: rem-calc(250);
+$off-canvas-width: rem-calc(300);
 $off-canvas-bg: $oil;
 // $off-canvas-bg-hover: scale-color($tabbar-bg, $lightness: -30%);
 // $off-canvas-bg-active: scale-color($tabbar-bg, $lightness: -30%);
