--- a/assets/scss/_settings.scss
+++ b/assets/scss/_settings.scss
@@ -124,7 +124,7 @@ $primary-color: #008CBA;
 // $alert-color: #f04124;
 // $success-color: #43AC6A;
 // $warning-color: #f08a24;
-// $info-color: #a0d3e8;
+$info-color: #a0d3e8;
 
 // We use these to control various global styles
 $body-bg: $jet;
