--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
 /******************************************************************
-Theme Name: JointsWP
-Theme URI: http://www.jointswp.com
-Description: 
-Author: Your Name Here
-Author URI: http://www.yoururlhere.com
-Version: 3.0
-License: GNU General Public License & MIT
-License URI: http://www.gnu.org/licenses/gpl-2.0.html
-Tags: Sass
+Theme Name: Corporate Sellout
+Theme URI: http://www.corporate-sellout.com/
+Description: Theme for corporate-sellout.com, based on JointsWP
+Author: Thad Boyd
+Author URI: http://www.corporate-sellout.com/
+Version: 2.0
+License: GNU General Public License v3 & MIT
+License URI: http://www.gnu.org/licenses/gpl-3.0.html
+Tags: Foundation, Sass, SCSS, JointsWP, 
 ******************************************************************/
