Various updates and tweaks following live publish, including fixing missing permalinks and adjusting layouts, padding, and borders on individual posts.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7206,6 +7206,10 @@ pre code {
     padding: 0.5rem 1.5rem;
     margin-left: 3rem;
     margin-bottom: 2rem; }
+  @media only screen and (max-width: 40em) {
+    .hero img {
+      display: block;
+      margin: 0 auto 0.75rem; } }
 
 .sidebar {
   background-color: #333333;
@@ -7242,15 +7246,22 @@ main {
   main > header, main article {
     background-color: #FFFFFF;
     padding: 0 1.875rem 1px; }
+  main article {
+    border-bottom: solid 2px #DDDDDD;
+    padding-bottom: 1.25rem; }
   main article:nth-of-type(even) {
     background-color: #F9F9F9; }
   main > nav {
     padding: 0.25rem 1.875rem; }
 
-.tags {
+.article-footer .tags {
   margin-bottom: 0; }
+  .article-footer .tags:not(:empty) {
+    border-top: 1px solid #DDDDDD;
+    margin-top: 1.25rem;
+    padding-top: 1.25rem; }
 
-.comments-area {
+.comment-respond {
   border-top: 1px solid #DDDDDD;
   margin-top: 1.25rem;
   padding-top: 0.3125rem; }
