--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7146,8 +7146,13 @@ h1, h2, h3, h4, h5, h6, p, abbr, label, caption, table caption {
 abbr, label, caption {
   opacity: 0.8; }
 
+a:not(:link) {
+  color: inherit;
+  cursor: inherit; }
+
 a:visited {
-  color: #AA33AA; }
+  color: #AA33AA;
+  cursor: pointer; }
   a:visited:hover {
     color: #772477; }
 
@@ -7265,6 +7270,27 @@ main {
   border-top: 1px solid #DDDDDD;
   margin-top: 1.25rem;
   padding-top: 0.3125rem; }
+
+.recaptcha-container {
+  position: relative;
+  width: 302px;
+  height: 76px;
+  background: #F9F9F9; }
+  .recaptcha-container .loading {
+    content: 'Loading...';
+    color: #666666;
+    position: absolute;
+    right: 40%;
+    top: 35%;
+    z-index: 1; }
+  .recaptcha-container iframe {
+    position: relative;
+    z-index: 2; }
+
+@media only screen and (min-width: 64.0625em) {
+  .wpcf7-form input[type="submit"] {
+    display: block;
+    margin: 0.375rem 0; } }
 
 #mainFooter {
   background-color: #222222;
