--- a/assets/scss/_mixins.scss
+++ b/assets/scss/_mixins.scss
@@ -103,3 +103,14 @@ really slow down your CSS. Don't overdo it.
 }
 
 
+/* CUSTOM */
+@mixin hr-before {
+  border-top: $hr-border-width $hr-border-style $hr-border-color;
+  margin-top: $hr-margin;
+  padding-top: $hr-margin;
+}
+@mixin hr-after {
+  border-bottom: $hr-border-width $hr-border-style $hr-border-color;
+  margin-bottom: $hr-margin;
+  padding-bottom: $hr-margin;
+}
