--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,6 +7,7 @@ all of your Sass files so they can compile into one
 CSS file. 
 ******************************************************************/
 @import url("http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,700italic,400,300,700");
+@import url("../../bower_components/font-awesome/scss/font-awesome");
 /*! normalize.css v3.0.3 | MIT License | github.com/necolas/normalize.css */
 /**
  * 1. Set default font family to sans-serif.
