--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -8,6 +8,7 @@ CSS file.
 ******************************************************************/
 
 @import url("http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,700italic,400,300,700");
+@import url("../../bower_components/font-awesome/scss/font-awesome");
 
 // IMPORTING STYLES
 
