Changed placeholder color

--- a/assets/scss/_settings.scss
+++ b/assets/scss/_settings.scss
@@ -105,7 +105,7 @@ $smoke       : #EEEEEE;
 $gainsboro   : #DDDDDD;
 // $iron        : #CCCCCC;
 // $base        : #AAAAAA;
-// $aluminum    : #999999;
+$aluminum    : #999999;
 // $jumbo       : #888888;
 // $monsoon     : #777777;
 // $steel       : #666666;
