--- a/assets/scss/_settings.scss
+++ b/assets/scss/_settings.scss
@@ -154,8 +154,8 @@ $body-bg: $jet;
 // d. Media Query Ranges
 // - - - - - - - - - - - - - - - - - - - - - - - - -
 
-// $small-breakpoint:  em-calc(640);
-// $medium-breakpoint: em-calc(1024);
+$small-breakpoint:  em-calc(800);
+$medium-breakpoint: em-calc(1280);
 // $large-breakpoint:  em-calc(1440);
 // $xlarge-breakpoint: em-calc(1920);
 
